# code_final

./: README.md  sdkconfig  sdkconfig.old
continuous_read/main/: continuous_read_main.c
draft_lib/: index.html
draft_lib/http_server_app/: CMakeLists.txt  http_server_app.c
esp32-ota-master/main/: wifi.c
i2c_oled/main/: i2c_oled_example_main.c
node1/: CMakeLists.txt  README.md  component.mk  flash_contents.txt  partitions.csv  sdkconfig.old
node1/common/app_ota/: CMakeLists.txt  app_ota.c
node1/main/: app_main.c  copy.txt
node2/: CMakeLists.txt  sdkconfig
nvs_rw_value/: flash_contents.txt
pcb/: Final_Project.IntLib  Final_Project.OutJob  Final_Project.PrjPcb  Final_Project.PrjPcbStructure  final_pcb.rar  final_sch.SchDoc
pcb/Final_Project1/: Final_Project.SCHLIB  final_pcb.PcbLib
pcb/Final_Project2/: Final_Project.SCHLIB  final_pcb.PcbLib
pcb/Project Outputs for Final_Project/: Design Rule Check - final_pcb.drc  Design Rule Check - final_pcb.html  Final_Project_bom.xlsx
pcb/__Previews/: final.SchDocPreview  final_sch.SchDocPreview
rotary_encoder/main/: main.c
simple_ota_example/: sdkconfig.old
ssl_mutual_auth/: CMakeLists.txt  component.mk  partitions.csv  sdkconfig  sdkconfig.old
ssl_mutual_auth/html/: index.html
ssl_mutual_auth/main/: CMakeLists.txt  app_config.c  app_config.h  app_main.c  app_mqtt.c  app_mqtt.h  app_ota.c  app_ota.h  copy.c  http_server_app.c  i2c_oled.c  i2c_oled.h  sensor.c  sensor.h  ssdf.c
station/html/: index.html
station/main/: app_main.c
test/: note.txt
update_ota_stm32/: CMakeLists.txt
(+97 files in other folders)
